<resources>
    <string name="app_name">pacs-mobile-application</string>
    <string name="welcome_msg">Welcome to MSA Smart Access System</string>
    <!-- For Sign Up Page / Activity -->
    <string name="go_to_sign_in">Already Have an account? Sign In</string>
    <!-- For Sign In Page / Activity -->
    <string name="go_to_sign_up">Not having an account? Sign Up</string>
    <string name="guest">Visitor</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="employee_id">Employee ID</string>
    <string name="ssn">SSN</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="profile_page">User Profile</string>
    <string name="id">ID Number</string>
    <string name="name">Name</string>
    <string name="personal_access_card">Personal Access Card</string>
    <string name="access_card">Access Card</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="aiddescription">PACS AID</string>
    <string name="servicedesc">PACS Host APDU Service</string>
    <string name="biometric_authentication_login">Use Biometric Authentication</string>
    <string name="sign_out">Sign Out</string>
    <string name="scan_mobile_on_nfc_reader">Scan mobile on NFC reader</string>
    <string name="access_history">Access History</string>
</resources>