<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="10dp"
    tools:context=".ui.SignUpActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/welcome_msg"
        android:textAlignment="center"
        android:textColor="@color/plain_purple"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108" />

    <Switch
        android:id="@+id/guest"
        android:layout_width="115dp"
        android:layout_height="62dp"
        android:layout_marginEnd="8dp"
        android:text="@string/guest"
        android:textColor="@color/white"
        android:textSize="25sp"

        android:theme="@style/SCBSwitch"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/ubuntu_light"
        android:paddingStart="10dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="40sp"

        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.506"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_layout_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/first_name"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/input_text_field_styling_switch_off"
                android:fontFamily="@font/ubuntu_light"
                android:hint="@string/first_name"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/input_text_field_styling_switch_off"
                android:fontFamily="@font/ubuntu_light"
                android:hint="@string/last_name"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/employee_id"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/input_text_field_styling_switch_off"
                android:fontFamily="@font/ubuntu_light"
                android:hint="@string/employee_id"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/ssn"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/input_text_field_styling_switch_off"
                android:fontFamily="@font/ubuntu_light"
                android:hint="@string/ssn"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <EditText
            android:id="@+id/email_signup"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_text_field_styling_switch_off"
            android:fontFamily="@font/ubuntu_light"
            android:hint="@string/email"
            android:padding="10dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/input_text_field_styling_switch_off"
                android:fontFamily="@font/ubuntu_light"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/confirm"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/input_text_field_styling_switch_off"
                android:fontFamily="@font/ubuntu_light"
                android:hint="@string/confirm"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>


        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textFontWeight="700"
            android:textSize="23sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/ubuntu_light"
            android:onClick="goToLoginAct"
            android:paddingStart="10dp"
            android:text="@string/go_to_sign_in"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>